--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <title>Kino</title>
     <link rel="stylesheet" href="index.css">
+    <link href="https://fonts.googleapis.com/css?family=Comfortaa:wght@500&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="container">
       <canvas id="canvas"></canvas>
     </div>
   </body>
-  <script> require("./core.js") </script>
+  <script> require("./src/core.js") </script>
 </html>
