Impl: basic graph structure

--- a/index.html
+++ b/index.html
@@ -11,5 +11,5 @@
       <canvas id="canvas"></canvas>
     </div>
   </body>
-  <script> require("./src/core.js") </script>
+  <script> require("./src/loader.js") </script>
 </html>
