Refactor: change whole structures

--- a/kino/index.html
+++ b/kino/index.html
@@ -7,9 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:wght@500&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div id="container">
-      <canvas id="canvas"></canvas>
-    </div>
+    <div id="container"></div>
   </body>
-  <script> require("./src/loader.js") </script>
+  <script> require("./src/main.js") </script>
 </html>
