--- a/kino-overlay/index.html
+++ b/kino-overlay/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Kino</title>
+    <title>Kino : Overlay</title>
     <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:wght@500&display=swap" rel="stylesheet">
   </head>
